# mosaic

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  test.sh
.cargo/: config.toml
cc_use/: Cargo.toml
cc_use/src/: lib.rs
cc_use_common/: Cargo.toml
cc_use_common/src/: lib.rs
doc/: salsa_test.rs
examples/: bindings.rs  example.cc  pod.cc  pod.h
examples/bindings/: templates.rs
gen_macro/: Cargo.toml
gen_macro/impl/: Cargo.toml
gen_macro/impl/src/: lib.rs
gen_macro/src/: lib.rs
src/: cc_use.rs  codegen.rs  diagnostics.rs  hir.rs  index.rs  ir.rs  lib.rs  libclang.rs  main.rs  salsa_test.rs  test_util.rs  util.rs
src/libclang/: db.rs  diagnostics.rs  index.rs  lowering.rs  mod.rs  rent.rs
test/run-make/: common.mk
test/run-make/cc_use/: Makefile  cc_use.h  cc_use.rs  cc_use.stdout  pod.rs
test/run-make/err-no-output/: Makefile  input.h
test/run-make/pod/: Makefile  pod.mod.h  pod_use.rs  pod_use.stdout
test/ui/: cc_use.h  cc_use.rs  cc_use.stderr  invalid_export.cc  invalid_export.stderr
tests/pod/: Makefile  pod_use.rs
