[package]
name = "peasy"
version = "0.1.0"
authors = ["Tyler Mandry <tmandry@gmail.com>"]
edition = "2018"

default-run = "peasy"

[dependencies]
gen_macro = { path = "./gen_macro" }

clang = { version = "0.24.0", features = ["clang_9_0"] }
codespan = "0.9.5"
codespan-reporting = "0.9.5"
itertools = "0.9"
lazy_static = "1.4.0"
rental = "0.5.4"
salsa = "0.14.1"
structopt = "0.3"
tempfile = "3.1"
termcolor = "1.1.0"
thiserror = "1.0.9"

# cc_use deps
syn = { version = "1.0", features = ["full", "parsing"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# runtests deps
cc_crate = { package = "cc", version = "1.0" }

[dev-dependencies]
pretty_assertions = "0.6.1"
