# Copyright (c) 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "peasy"
version = "0.1.0"
authors = ["Tyler Mandry <tmandry@gmail.com>"]
edition = "2018"

default-run = "peasy"

[dependencies]
cc_use_common = { path = "./cc_use_common" }
gen_macro = { path = "./gen_macro" }

clang = { version = "1.0", features = ["clang_9_0"] }
clang-sys = { version = "*", features = ["runtime"] }
codespan = "0.9.5"
codespan-reporting = "0.9.5"
itertools = "0.9"
lazy_static = "1.4.0"
rental = "0.5.4"
salsa = "0.14.1"
structopt = "0.3"
tempfile = "3.1"
termcolor = "1.1.0"

syn = { version = "1.0", features = ["full", "parsing"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# runtests deps
cc_crate = { package = "cc", version = "1.0" }
trybuild = { git = "https://github.com/tmandry/trybuild.git", branch = "strategy" }

[dev-dependencies]
pretty_assertions = "0.6.1"

[workspace]
members = [
    "cc_use"
]
