# Copyright (c) 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "cc_use_common"
version = "0.1.0"
authors = ["Tyler Mandry <tmandry@gmail.com>"]
edition = "2018"

[dependencies]
syn = { version = "1.0" }
proc-macro2 = { version = "1.0" }
